gitops/bookstore/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: book-store
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: book-store-dev
    weight: 100
  wildcardPolicy: None
